# libTemplateEngine

./: .gitignore  COPYING.LESSER  README.md  libuild  msbuild.cmd  wibuild.cmd
src/: CMakeLists.txt  libTemplateEngine.licenseheader
src/TemplateEngine/: CMakeLists.txt
src/TemplateEngine/include/: Context.hpp  Dictionary.hpp  DictionaryList.hpp  Exception.hpp  ExpansionTemplate.hpp  Lexer.hpp  LookaheadScanner.hpp  RepeatTemplate.hpp  ReverseIterator.hpp  Scanner.hpp  SemanticVersion.hpp  SimpleTemplate.hpp  StringScanner.hpp  Template.hpp  TemplateEngine.hpp  TemplateList.hpp  Types.hpp  Version.hpp  stdafx.h
src/TemplateEngine/src/: Context.cpp  Dictionary.cpp  DictionaryList.cpp  ExpansionTemplate.cpp  Lexer.cpp  LookaheadScanner.cpp  RepeatTemplate.cpp  SemanticVersion.cpp  SimpleTemplate.cpp  StringScanner.cpp  Template.cpp  TemplateList.cpp  Types.cpp  Version.cpp  stdafx.cpp
src/build_scripts/: TargetArch.cmake
src/doc/: CMakeLists.txt  Doxyfile.in  README.footer  README.header  build_readme.cmd  build_readme.sh  concept.dia  mainpage.footer  mainpage.header  mainpage.md  mainpage.template  mainpage_template.txt  mystyle.css  samples.dox  syntax.ebnf
src/examples/List/: CMakeLists.txt  main.cpp
src/examples/Simple/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt
src/test/src/: Dictionary.cpp  Lexer.cpp  LookaheadScanner.cpp  Parser.cpp  StringScanner.cpp  run.cpp
